tests/overload/overload.exp

overload.js:1:18,28: call of method `match`
Error:
overload.js:1:18,31: string
This type is incompatible with
overload.js:1:9,14: number

overload.js:1:18,28: call of method `match`
Error:
overload.js:1:18,31: access of computed property/element
Computed property/element cannot be accessed on possibly null value
overload.js:1:18,28: null

overload.js:1:18,28: call of method `match`
Error:
overload.js:1:18,31: access of computed property/element
Computed property/element cannot be accessed on possibly undefined value
overload.js:1:18,28: undefined

overload.js:1:18,28: call of method `match`
Error:
overload.js:1:27,27: number
This type is incompatible with
[LIB] core.js:199:19,33: union type

overload.js:2:18,36: call of method `match`
Error:
overload.js:2:18,39: string
This type is incompatible with
overload.js:2:9,14: number

overload.js:2:18,36: call of method `match`
Error:
overload.js:2:18,39: access of computed property/element
Computed property/element cannot be accessed on possibly null value
overload.js:2:18,36: null

overload.js:2:18,36: call of method `match`
Error:
overload.js:2:18,39: access of computed property/element
Computed property/element cannot be accessed on possibly undefined value
overload.js:2:18,36: undefined

overload.js:4:18,36: call of method `split`
Error:
overload.js:4:18,39: string
This type is incompatible with
overload.js:4:9,14: number

test2.js:7:2,16: string
This type is incompatible with
test2.js:7:19,24: number

Found 9 errors
